# AgentOS

./: README.md
3：Kitbag/: ARCHITECTURE.md  README.md  TEST_COVERAGE.md  pyproject.toml
3：Kitbag/agent_os/kitbag/: __init__.py  env_utils.py  executor.py  generator_runner.py  kitbag.py  permission.py  result_standardizer.py  tool_base.py  validator.py  yaml_loader.py
3：Kitbag/agent_os/kitbag/adapters/: __init__.py  base.py  http_adapter.py  http_tool.py  python_adapter.py  python_tool.py  subprocess_adapter.py
3：Kitbag/kitbags/http/: chat_backend.yaml
3：Kitbag/kitbags/python/: code_executor.yaml  coding_task_document_parser.yaml  python_exec.yaml  search.yaml
3：Kitbag/kitbags/subprocess/: shell_tools.yaml
3：Kitbag/tests/: __init__.py  conftest.py  shared_mocks.py
3：Kitbag/tests/integration/: test_kitbag_full_flow.py
3：Kitbag/tests/unit/: test_env_utils.py  test_executor.py  test_generator_runner.py  test_http_protocol.py  test_http_protocol_edge_cases.py  test_kitbag_config.py  test_kitbag_query.py  test_kitbag_registry.py  test_permission_edge_cases.py  test_python_protocol.py  test_result_standardizer.py  test_subprocess_protocol.py  test_validator.py  test_yaml_loader.py
MemoryCenter/agent_os/memory_center/: .env  README.md  TEST_COVERAGE.md  __init__.py  config.py  context_assembler.py  coverage.xml  document_service.py  memory_center.py  pyproject.toml
MemoryCenter/agent_os/memory_center/storage/: __init__.py  base.py  postgres.py  serialization.py
MemoryCenter/agent_os/memory_center/tests/: conftest.py
MemoryCenter/agent_os/memory_center/tests/integration/: test_chinese_search.py  test_coding_automation.py  test_concurrent_operations.py  test_context_building.py  test_cross_task_search.py  test_document_query_flow.py  test_large_content.py  test_write_read_flow.py
MemoryCenter/agent_os/memory_center/tests/unit/: test_config_validation.py  test_connection_pool.py  test_context_assembler.py  test_document_service.py  test_edge_cases.py  test_memory_center_facade.py  test_memory_item_auto_id.py  test_metadata_jsonb.py  test_postgres_storage_delete.py  test_postgres_storage_read.py  test_postgres_storage_search.py  test_postgres_storage_write.py  test_search_methods.py  test_serialization.py
TaskCenter/: .env  INSTALL.md  README.md  TEST_LIST.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  verify_install.py
TaskCenter/agent_os/: __init__.py
TaskCenter/agent_os/task_center/: __init__.py  config.py  state_machine.py  task_center.py
TaskCenter/agent_os/task_center/batch/: __init__.py  batch_processor.py  batch_validator.py  ref_resolver.py
TaskCenter/agent_os/task_center/cleanup/: __init__.py  cleanup_handler.py
TaskCenter/agent_os/task_center/graph/: __init__.py  cycle_detector.py  depth_checker.py  graph_validator.py
TaskCenter/agent_os/task_center/lifecycle/: __init__.py  lifecycle_manager.py  status_transitions.py  terminal_transitions.py  unblock_handler.py
TaskCenter/agent_os/task_center/state_ops/: __init__.py  retry_cas.py  state_ops.py
TaskCenter/agent_os/task_center/storage/: __init__.py  db_pool.py  interfaces.py  pg_runtime_store.py  pg_task_store.py  task_row_mapper.py
TaskCenter/agent_os/task_center/storage/migrations/: 001_initial.sql
TaskCenter/agent_os_task_center.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
TaskCenter/tests/: __init__.py  conftest.py
TaskCenter/tests/component/: __init__.py  test_batch_processor.py  test_lifecycle_manager.py  test_pg_runtime_store.py  test_pg_task_store.py  test_state_ops.py  test_unblock_handler.py
TaskCenter/tests/integration/: __init__.py  test_batch_atomicity.py  test_circular_dependency.py  test_cleanup_handler.py  test_concurrent_updates.py  test_create_complete_workflow.py  test_depth_independence.py  test_event_publication.py  test_graph_validation_integration.py  test_resume_workflow.py  test_task_center_api.py  test_waiting_dependency_scenarios.py
TaskCenter/tests/unit/: __init__.py  test_batch_validator.py  test_cycle_detector.py  test_depth_checker.py  test_ref_resolver.py  test_retry_cas.py  test_state_machine.py  test_task_row_mapper.py
TaskCenter/tests/utils/: __init__.py  async_helpers.py  mock_common.py  mock_event_bus.py  task_builder.py  test_db.py
agent_os.common/: README.md  pyproject.toml
agent_os.common/agent_os/common/: __init__.py  config.py  enums.py  event_bus.py  events.py  exceptions.py  interfaces.py  models.py
agent_os.common/tests/: test_actor_contracts.py  test_conversation_assigned_event.py  test_enums_and_exceptions.py  test_event_bus.py  test_group_state.py  test_llm_and_group_actors.py  test_models_core.py  test_public_api_imports.py  test_v1_1_new_fields.py
parse_coding_task/: README.md  pyproject.toml  setup.py
parse_coding_task/coding_task_document_parser/: __init__.py  content_extractor.py  history_collector.py  json_parser.py  models.py  parser.py  source_detector.py  termination.py
parse_coding_task/tests/: __init__.py  conftest.py  test_content_extractor.py  test_history_collector.py  test_json_parser.py  test_models.py  test_parser_architect.py  test_parser_edge_cases.py  test_parser_engineer.py  test_source_detector.py  test_termination.py
